Lots of refactoring and testing in pricing promotion controller